remove hidden input, use offscreen original input/textarea instead deprecate mentions-kinder-change event, use standard change event instead fix placeholders on reset

--- a/css/mentions-kinder.css
+++ b/css/mentions-kinder.css
@@ -44,3 +44,17 @@
   display: inline;
   white-space: nowrap;
 }
+
+.mentions-kinder-hidden, .mentions-kinder-hidden:focus {
+    clip: rect(0 0 0 0) !important;
+    width: 1px !important;
+    height: 1px !important;
+    border: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden !important;
+    position: absolute !important;
+    outline: 0 !important;
+    left: 0px !important;
+    top: 0px !important;
+}
